Bug 783139: Restore setting .widget on nsGUIEvent. r=dRdR